change folder week8 to assignment

--- a/assignment/assignment1.html
+++ b/assignment/assignment1.html
@@ -81,7 +81,7 @@
         <div class="box2">
           <h5>Artificial Intelligence</h5>
           <p id="artificial">
-            Artificial intelligence is the
+            Artificial intelligence is the<br>
             simulation of human intelligence processes by machines,
             especially computer systems
           </p>
@@ -93,7 +93,7 @@
           <h5>Community Service</h5>
           <p id="community">
             Community service is unpaid work performed by a person or group of
-            people for the benefit of community
+            people for the benefit of<br>community
           </p>
           <div class="btndetails4">
             <a class="details" href="#">DETAILS</a>
@@ -103,7 +103,7 @@
           <h5>Computer Architecture & Organization</h5>
           <p>
             Computer Organization and Architecture is the study of internal
-            working, structuring and implementation of a computer
+            working, structuring and implementation of a computer<br>
             system
           </p>
           <div class="btndetails5">
