delete and add new some jpg

--- a/assignment/assignment1.html
+++ b/assignment/assignment1.html
@@ -118,7 +118,7 @@
       <div class="box3">
         <img
           class="guamusang"
-          src="img/guamusang.jpeg"
+          src="img/guamusang.jpg"
           width="325px"
           height="525px"
         />
@@ -160,7 +160,7 @@
       <h3>Nba Players I Like</h3>
       <div class="boxbron">
         <div class="lebron">
-          <img src="img/lerbonjames.jpeg" width="486px" height="500px" />
+          <img src="img/lebronjames.jpg" width="486px" height="500px" />
         </div>
         <div class="textbron">
           "There's no point in playing in the NBA if you <br />don't believe you
