--- a/index.html
+++ b/index.html
@@ -197,6 +197,15 @@
                 <li>Exercise3</li>
               </a>
             </ul>
+            <h2>Individual Assignment</h2>
+            <ul>
+              <a
+                href="https://chowkuiheng.github.io/assignment/assignment1.html"
+                target="__assignment1"
+              >
+                <li>Assignment1</li>
+              </a>
+            </ul>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
             <img class="rounded-lg-3" src="img/chowkuiheng.jpeg" width="360" />
