correct the wrong word

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -181,7 +181,7 @@
 
         <div class="three">
           3
-          <p>On going homeork</p>
+          <p>On going homework</p>
         </div>
 
         <div class="three">
