--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Assignment 1</title>
+    <title>Chow Kui Heng</title>
     <link rel="stylesheet" type="text/css" href="cssfile/assignment1.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
