--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <h2>Individual Assignment</h2>
             <ul>
               <a
-                href="https://chowkuiheng.github.io/assignment/assignment1.html"
+                href="https://chowkuiheng.github.io/assignment/"
                 target="__assignment1"
               >
                 <li>Assignment1</li>
