on going aboutme html, add jpg

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Assignment 1</title>
+    <title>Chow Kui Heng</title>
     <link rel="stylesheet" type="text/css" href="cssfile/assignment1.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -81,8 +81,8 @@
         <div class="box1">
           <h5>Mobile Application <br />Developmet</h5>
           <p>
-            The process of developing software applications that operate<br> on
-            mobile devices
+            The process of developing software applications that operate on
+            mobile <br> devices
           </p>
           <div class="btndetails0">
             <a class="details" href="#">DETAILS</a>
@@ -233,7 +233,7 @@
       </div>
     </div>
     <div class="container7">
-      <div class="topnav1">
+      <div class="footer">
         <p>Copyright © 2022 All Rights Reserved</p>
         <a href="#">Home</a>
         <a href="#">About Me</a>
