restructure css and html

--- a/assignment/aboutme.html
+++ b/assignment/aboutme.html
@@ -117,8 +117,7 @@
           <h5>Laksam</h5>
           <img src="img/laksam.jpg" width="65%" />
           <p>
-            Laksam Laksei (Laksang) is a type of common dish from Kelantan and
-            Terengganu. It is made from rice flour and eaten with gravy
+            Laksam Laksei (Laksang) is a type of common dish from Kelantan. It is made from rice flour and eaten with gravy
           </p>
         </div>
         <div class="box2">
@@ -179,17 +178,19 @@
           <div class="newera">
             <img src="img/newera.jpg" width="350px" />
           </div>
-          <p>
-            Name: New Era University College<br />
-            <br />
-            Address: Kolej Universiti New Era, Lot 5,<br />
-            Seksyen 10, Jalan Bukit 43000 Kajang Selangor <br />
-            <br />
-            Phone: 6039732770 <br />
-            <br />
+          <div class="newbox">
+            <p>
+              Name: New Era University College<br />
+              <br />
+              Address: Kolej Universiti New Era, Lot 5,<br />
+              Seksyen 10, Jalan Bukit 43000 Kajang Selangor <br />
+              <br />
+              Phone: 6039732770 <br />
+              <br />
 
-            Email: neuc@newera.edu.my
-          </p>
+              Email: neuc@newera.edu.my
+            </p>
+          </div>
         </div>
       </div>
     </div>
