on going aboutme

--- a/assignment/aboutme.html
+++ b/assignment/aboutme.html
@@ -34,7 +34,7 @@
         <h3>About Me</h3>
         <p>I'm living in <strong>Kelantan</strong></p>
         <div class="boxflex">
-          <img src="img/KelantanFlag.jpg" alt="" width="30%" />
+          <img src="img/KelantanFlag.jpg" width="30%" />
           <div class="word">
             Kelantan is a state in Malaysia. The capital is Kota Bharu and the
             royal seat is Kupang Kerang. The state's honorific name is Darul
@@ -167,7 +167,7 @@
           </p>
         </div>
         <div class="tip2">
-          <img src="img/smktip2.jpg" width="350px" />
+          <img src="img/smktip2.jpg" width="75%" />
         </div>
       </div>
     </div>
@@ -176,7 +176,7 @@
       <div class="uni">
         <div class="textuni">
           <div class="newera">
-            <img src="img/newera.jpg" width="350px" />
+            <img src="img/newera.jpg" width="100%" />
           </div>
           <div class="newbox">
             <p>
@@ -207,7 +207,7 @@
       </div>
     </div>
     <div class="container7">
-      <div class="topnav1">
+      <div class="footer">
         <p>Copyright © 2022 All Rights Reserved</p>
         <a href="#">Home</a>
         <a href="#">About Me</a>
