ongoing my work html

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,9 +4,12 @@
     <title>Chow Kui Heng</title>
     <link rel="stylesheet" type="text/css" href="cssfile/assignment1.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/ddb030312e.js"
       crossorigin="anonymous"
@@ -82,7 +85,8 @@
           <h5>Mobile Application <br />Developmet</h5>
           <p>
             The process of developing software applications that operate on
-            mobile <br> devices
+            mobile <br />
+            devices
           </p>
           <div class="btndetails0">
             <a class="details" href="#">DETAILS</a>
@@ -135,8 +139,7 @@
           <h5>Computer Architecture & Organization</h5>
           <p>
             Computer Organization and Architecture is the study of internal
-            working, structuring and implementation of a computer
-            system
+            working, structuring and implementation of a computer system
           </p>
           <div class="btndetails5">
             <a class="details" href="#">DETAILS</a>
@@ -191,15 +194,17 @@
       <h4>Nba Players I Like</h4>
       <div class="boxbron">
         <div class="lebron">
-          <img src="img/lebronjames.jpg" width="92%" height="92%" />
+          <img src="img/lebronjames.jpg" width="100%" />
         </div>
         <div class="textbron">
-          "There's no point in playing in the NBA if you <br />don't believe you
-          can win a championship."
-        
+          <p>
+            "There's no point in playing in the NBA if you don't believe you can
+            win a championship."
+          </p>
+          <div class="smallbox">
             <h3>Lebron James</h3>
             <p>NBA PLAYER</p>
-          
+          </div>
         </div>
       </div>
     </div>
