restructure index html and some css

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -201,10 +201,8 @@
             "There's no point in playing in the NBA if you don't believe you can
             win a championship."
           </p>
-          <div class="smallbox">
-            <h3>Lebron James</h3>
-            <p>NBA PLAYER</p>
-          </div>
+          <h3>Lebron James</h3>
+          <h5>NBA PLAYER</h5>
         </div>
       </div>
     </div>
