adding link to index html

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -21,9 +21,9 @@
         <img src="img/kuihenglogo.png" alt="" width="70px" height="70px" />
       </div>
       <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#aboutme">About Me</a>
-        <a href="#mywork">My Work</a>
+        <a href="https://chowkuiheng.github.io/assignment/" class="active">Home</a>
+        <a href="https://chowkuiheng.github.io/assignment/aboutme.html" target="_new">About Me</a>
+        <a href="https://chowkuiheng.github.io/assignment/mywork.html" target="_new">My Work</a>
         <a href="#myfavourite">My Favourite</a>
         <a href="#contact">Contact</a>
         <a class="icon" onclick="openNav()">&#9776; </a>
@@ -40,9 +40,9 @@
         </div>
 
         <div class="sidebar">
-          <a href="#"><img src="img/facebooklogo.png" width="35px" /></a>
-          <a href="#"><img src="img/instagram.png" width="35px" /></a>
-          <a href="#"><img src="img/gmail.png" width="35px" /></a>
+          <a href="https://www.facebook.com/kuihengchow/" target="_new"><img src="img/facebooklogo.png" width="35px" /></a>
+          <a href="https://www.instagram.com/jackiechow6867/" target="_new"><img src="img/instagram.png" width="35px" /></a>
+          <a href="mailto:chowkuiheng1018@e.newera.edu.my" target="_new"><img src="img/gmail.png" width="35px" /></a>
         </div>
       </div>
     </div>
@@ -51,9 +51,9 @@
         >&times;</a
       >
       <div class="overlay-content">
-        <a href="#">Home</a>
-        <a href="#">About Me</a>
-        <a href="#">My Work</a>
+        <a href="https://chowkuiheng.github.io/assignment/">Home</a>
+        <a href="https://chowkuiheng.github.io/assignment/aboutme.html">About Me</a>
+        <a href="https://chowkuiheng.github.io/assignment/mywork.html">My Work</a>
         <a href="#">My Favourite</a>
         <a href="#">Contact</a>
       </div>
@@ -89,7 +89,7 @@
             devices
           </p>
           <div class="btndetails0">
-            <a class="details" href="#">DETAILS</a>
+            <a class="details" href="https://en.wikipedia.org/wiki/Mobile_app_development" target="_new">DETAILS</a>
           </div>
         </div>
         <div class="box1">
@@ -99,7 +99,7 @@
             the internet
           </p>
           <div class="btndetails1">
-            <a class="details" href="#">DETAILS</a>
+            <a class="details" href="https://en.wikipedia.org/wiki/Web_design" target="_new">DETAILS</a>
           </div>
         </div>
         <div class="box1">
@@ -109,7 +109,7 @@
             stand-alone either in a client or a server
           </p>
           <div class="btndetails2">
-            <a class="details" href="#">DETAILS</a>
+            <a class="details" href="https://en.wikipedia.org/wiki/Java_(programming_language)" target="_new">DETAILS</a>
           </div>
         </div>
       </div>
@@ -122,7 +122,7 @@
             computer systems
           </p>
           <div class="btndetails3">
-            <a class="details" href="#">DETAILS</a>
+            <a class="details" href="https://en.wikipedia.org/wiki/Artificial_intelligence" target="_new">DETAILS</a>
           </div>
         </div>
         <div class="box2">
@@ -132,7 +132,7 @@
             people for the community
           </p>
           <div class="btndetails4">
-            <a class="details" href="#">DETAILS</a>
+            <a class="details" href="https://en.wikipedia.org/wiki/Community_service" target="_new">DETAILS</a>
           </div>
         </div>
         <div class="box2">
@@ -142,7 +142,7 @@
             working, structuring and implementation of a computer system
           </p>
           <div class="btndetails5">
-            <a class="details" href="#">DETAILS</a>
+            <a class="details" href="https://en.wikipedia.org/wiki/Computer_architecture" target="_new">DETAILS</a>
           </div>
         </div>
       </div>
@@ -229,18 +229,18 @@
         <h4>Get in touch</h4>
         <button class="contact">Contact</button>
         <div class="sidebar1">
-          <a href="#"><img src="img/facebooklogo.png" width="35px" /></a>
-          <a href="#"><img src="img/instagram.png" width="35px" /></a>
-          <a href="#"><img src="img/gmail.png" width="35px" /></a>
+          <a href="https://www.facebook.com/kuihengchow/" target="_new"><img src="img/facebooklogo.png" width="35px" /></a>
+          <a href="https://www.instagram.com/jackiechow6867/" target="_new"><img src="img/instagram.png" width="35px" /></a>
+          <a href="mailto:chowkuiheng1018@e.newera.edu.my" target="_new"><img src="img/gmail.png" width="35px" /></a>
         </div>
       </div>
     </div>
     <div class="container7">
       <div class="footer">
         <p>Copyright © 2022 All Rights Reserved</p>
-        <a href="#">Home</a>
-        <a href="#">About Me</a>
-        <a href="#">My Work</a>
+        <a href="https://chowkuiheng.github.io/assignment/">Home</a>
+        <a href="https://chowkuiheng.github.io/assignment/aboutme.html" >About Me</a>
+        <a href="https://chowkuiheng.github.io/assignment/mywork.html">My Work</a>
         <a href="#">My Favourite</a>
         <a href="#">Contact</a>
         <p>Term of Use &nbsp;&nbsp;Privacy Policy</p>
