adding link to aboutme,index and mywork

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -22,8 +22,8 @@
       </div>
       <div class="topnav" id="myTopnav">
         <a href="https://chowkuiheng.github.io/assignment/" class="active">Home</a>
-        <a href="https://chowkuiheng.github.io/assignment/aboutme.html" target="_new">About Me</a>
-        <a href="https://chowkuiheng.github.io/assignment/mywork.html" target="_new">My Work</a>
+        <a href="aboutme.html" >About Me</a>
+        <a href="mywork.html" >My Work</a>
         <a href="#myfavourite">My Favourite</a>
         <a href="#contact">Contact</a>
         <a class="icon" onclick="openNav()">&#9776; </a>
@@ -52,8 +52,8 @@
       >
       <div class="overlay-content">
         <a href="https://chowkuiheng.github.io/assignment/">Home</a>
-        <a href="https://chowkuiheng.github.io/assignment/aboutme.html">About Me</a>
-        <a href="https://chowkuiheng.github.io/assignment/mywork.html">My Work</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="mywork.html">My Work</a>
         <a href="#">My Favourite</a>
         <a href="#">Contact</a>
       </div>
@@ -239,8 +239,8 @@
       <div class="footer">
         <p>Copyright © 2022 All Rights Reserved</p>
         <a href="https://chowkuiheng.github.io/assignment/">Home</a>
-        <a href="https://chowkuiheng.github.io/assignment/aboutme.html" >About Me</a>
-        <a href="https://chowkuiheng.github.io/assignment/mywork.html">My Work</a>
+        <a href="aboutme.html" >About Me</a>
+        <a href="mywork.html">My Work</a>
         <a href="#">My Favourite</a>
         <a href="#">Contact</a>
         <p>Term of Use &nbsp;&nbsp;Privacy Policy</p>
