adding link to mywork html

--- a/assignment/mywork.html
+++ b/assignment/mywork.html
@@ -33,7 +33,7 @@
       <div class="text1">
         <h3>My Work</h3>
         <div class="gitlogo"><img src="img/githublogo.png" width="10%" /></div>
-        <div class="github"><a href="#">MyGithub</a></div>
+        <div class="github"><a href="https://chowkuiheng.github.io/">MyGithub</a></div>
         <div class="word">
           Click on "MyGithub" to see all my web design work
         </div>
@@ -79,7 +79,7 @@
             <div class="picture">
               <img src="img/homework.jpg" width="90%" />
             </div>
-            <a class="details" href="#">SEE MORE</a>
+            <a class="details" href="https://chowkuiheng.github.io/week4/homework1.html">SEE MORE</a>
           </div>
         </div>
         <div class="box1">
@@ -87,7 +87,7 @@
             <div class="picture">
               <img src="img/homework1.jpg" width="90%" />
             </div>
-            <a class="details" href="#">SEE MORE</a>
+            <a class="details" href="https://chowkuiheng.github.io/week4/homework2.html">SEE MORE</a>
           </div>
         </div>
         <div class="box1">
@@ -95,7 +95,7 @@
             <div class="picture">
               <img src="img/homework2.jpg" width="90%" />
             </div>
-            <a class="details" href="#">SEE MORE</a>
+            <a class="details" href="https://chowkuiheng.github.io/week4/homework3.html">SEE MORE</a>
           </div>
         </div>
       </div>
@@ -105,7 +105,7 @@
             <div class="picture">
               <img src="img/homework3.jpg" width="90%" />
             </div>
-            <a class="details" href="#">SEE MORE</a>
+            <a class="details" href="https://chowkuiheng.github.io/week4/homework4.html">SEE MORE</a>
           </div>
         </div>
         <div class="box2">
@@ -113,7 +113,7 @@
             <div class="picture">
               <img src="img/homework4.jpg" width="90%" />
             </div>
-            <a class="details" href="#">SEE MORE</a>
+            <a class="details" href="https://chowkuiheng.github.io/week4/homework5.html">SEE MORE</a>
           </div>
         </div>
         <div class="box2">
@@ -121,7 +121,7 @@
             <div class="picture">
               <img src="img/homework5.jpg" width="90%" />
             </div>
-            <a class="details" href="#">SEE MORE</a>
+            <a class="details" href="https://chowkuiheng.github.io/week6/exercise1.html">SEE MORE</a>
           </div>
         </div>
       </div>
@@ -129,7 +129,7 @@
     <div class="container3">
       <div class="workbox">
         <img src="img/homework6.jpg" width="25%" />
-        <div class="button"><a href="#">SEE MORE</a></div>
+        <div class="button"><a href="https://chowkuiheng.github.io/week6/homework1.html">SEE MORE</a></div>
       </div>
     </div>
     <div class="container4">
