on going myfavourite and add jpg

--- a/assignment/myfavourite.html
+++ b/assignment/myfavourite.html
@@ -32,10 +32,13 @@
     <div class="container1">
       <div class="text1">
         <h3>My Favourite</h3>
-        <div class="gitlogo"><img src="img/githublogo.png" width="10%" /></div>
-        <div class="word">
-          I enjoy playing basketball and rubik's cube
+        <div class="favourlogo">
+          <img src="img/basketball.png" width="9%" /><img
+            src="img/magiccube.png"
+            width="8%"
+          />
         </div>
+        <div class="word">I enjoy playing basketball and rubik's cube</div>
       </div>
     </div>
     <div id="myNav" class="overlay">
@@ -71,17 +74,56 @@
       }
     </script>
     <div class="container2">
-      <h2 id="heading">Favourite Basketball Player</h2>
-      <div class="bigbox1">
-  
-     
-   
+      <h2>Favourite Basketball Player</h2>
+      <div class="lebronbox">
+        <img src="img/lebronjames1.jpg" width="35%" />
+        <p>
+          LeBron Raymone James Sr. (born December 30, 1984)<br /><br />He is an
+          American professional basketball player who currently plays for the
+          Los Angeles Lakers in the National Basketball Association (NBA)
+        </p>
+      </div>
+      <div class="lebronbox1">
+        <img src="img/lebronjames2.jpg" width="30%" />
+        <p>
+          Career higlights and awards
+          <br />
+          <br />
+          4x NBA Champion (2012,2013,2016,2020)
+          <br />
+          3x NBA Finals MVP (2012,2013,2016)
+          <br />
+          4x NBA Mos Valuable Player (2009,2010,2012,2013)
+          <br />
+          18x NBA ALL-Star (2005-2022)
+          <br />
+          3x NBA ALL-Star Game MVP (2006,2008,2018)
+          <br />
+          13x ALL-NBA First Team (2006, 2008-2018),(2021)
+        </p>
       </div>
     </div>
     <div class="container3">
-      <div class="workbox">
-        <img src="img/homework6.jpg" width="25%" />
-        <div class="button"><a href="#">SEE MORE</a></div>
+      <h2>Favourite Rubik's Cube Player</h2>
+      <div class="feliksbox">
+        <img src="img/felikszemdegs1.jpg" width="30%" />
+        <p>
+          Feliks Aleksanders Zemdegs(born 20 December 1995)<br /><br />
+          He is a Rubik's Cube speedsolver from Australia
+        </p>
+      </div>
+      <div class="feliksbox1">
+        <img src="img/felikszemdegs2.jpg" width="25%" />
+        <p>
+          Career higlights and awards
+          <br><br>
+       
+          He is the first speedcuber to have won the World Cube Association
+          World Championship twice, in 2013 and 2015
+     <br><br>
+          He is widely regarded as the most successful and finest speedcuber of
+          all time
+        </p>
       </div>
     </div>
     <div class="container4">
