on going myfavourite html

--- a/assignment/myfavourite.html
+++ b/assignment/myfavourite.html
@@ -21,9 +21,9 @@
         <img src="img/kuihenglogo.png" alt="" width="70px" height="70px" />
       </div>
       <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#aboutme">About Me</a>
-        <a href="#mywork">My Work</a>
+        <a href="https://chowkuiheng.github.io/assignment/" class="active">Home</a>
+        <a href="aboutme.html" >About Me</a>
+        <a href="mywork.html">My Work</a>
         <a href="#myfavourite">My Favourite</a>
         <a href="#contact">Contact</a>
         <a class="icon" onclick="openNav()">&#9776; </a>
@@ -131,18 +131,18 @@
         <h4>Get in touch</h4>
         <button class="contact">Contact</button>
         <div class="sidebar1">
-          <a href="#"><img src="img/facebooklogo.png" width="35px" /></a>
-          <a href="#"><img src="img/instagram.png" width="35px" /></a>
-          <a href="#"><img src="img/gmail.png" width="35px" /></a>
+          <a href="https://www.facebook.com/kuihengchow/" target="_new"><img src="img/facebooklogo.png" width="35px" /></a>
+          <a href="https://www.instagram.com/jackiechow6867/" target="_new"><img src="img/instagram.png" width="35px" /></a>
+          <a href="mailto:chowkuiheng1018@e.newera.edu.my" target="_new"><img src="img/gmail.png" width="35px" /></a>
         </div>
       </div>
     </div>
     <div class="container6">
       <div class="footer">
         <p>Copyright © 2022 All Rights Reserved</p>
-        <a href="#">Home</a>
-        <a href="#">About Me</a>
-        <a href="#">My Work</a>
+        <a href="https://chowkuiheng.github.io/assignment/">Home</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="mywork.html">My Work</a>
         <a href="#">My Favourite</a>
         <a href="#">Contact</a>
         <p>Term of Use &nbsp;&nbsp;Privacy Policy</p>
