add link to all the page

--- a/assignment/myfavourite.html
+++ b/assignment/myfavourite.html
@@ -24,7 +24,7 @@
         <a href="https://chowkuiheng.github.io/assignment/" class="active">Home</a>
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html">My Work</a>
-        <a href="#myfavourite">My Favourite</a>
+        <a href="myfavourite.html">My Favourite</a>
         <a href="#contact">Contact</a>
         <a class="icon" onclick="openNav()">&#9776; </a>
       </div>
@@ -46,10 +46,10 @@
         >&times;</a
       >
       <div class="overlay-content">
-        <a href="#">Home</a>
-        <a href="#">About Me</a>
-        <a href="#">My Work</a>
-        <a href="#">My Favourite</a>
+        <a href="https://chowkuiheng.github.io/assignment/">Home</a>
+        <a href="aboutme.html" >About Me</a>
+        <a href="mywork.html">My Work</a>
+        <a href="myfavourite.html">My Favourite</a>
         <a href="#">Contact</a>
       </div>
     </div>
@@ -143,7 +143,7 @@
         <a href="https://chowkuiheng.github.io/assignment/">Home</a>
         <a href="aboutme.html">About Me</a>
         <a href="mywork.html">My Work</a>
-        <a href="#">My Favourite</a>
+        <a href="myfavourite.html">My Favourite</a>
         <a href="#">Contact</a>
         <p>Term of Use &nbsp;&nbsp;Privacy Policy</p>
       </div>
