--- a/assignment/aboutme.html
+++ b/assignment/aboutme.html
@@ -24,7 +24,7 @@
         <a href="https://chowkuiheng.github.io/assignment/" class="active">Home</a>
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html" >My Work</a>
-        <a href="#myfavourite">My Favourite</a>
+        <a href="myfavourite.html">My Favourite</a>
         <a href="#contact">Contact</a>
         <a class="icon" onclick="openNav()">&#9776; </a>
       </div>
@@ -52,7 +52,7 @@
         <a href="https://chowkuiheng.github.io/assignment/" class="active">Home</a>
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html" >My Work</a>
-        <a href="#myfavourite">My Favourite</a>
+        <a href="myfavourite.html">My Favourite</a>
         <a href="#contact">Contact</a>
       </div>
     </div>
@@ -212,7 +212,7 @@
         <a href="https://chowkuiheng.github.io/assignment/">Home</a>
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html">My Work</a>
-        <a href="#">My Favourite</a>
+        <a href="myfavourite.html">My Favourite</a>
         <a href="#">Contact</a>
         <p>Term of Use &nbsp;&nbsp;Privacy Policy</p>
       </div>
