--- a/assignment/index.html
+++ b/assignment/index.html
@@ -24,7 +24,7 @@
         <a href="https://chowkuiheng.github.io/assignment/" class="active">Home</a>
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html" >My Work</a>
-        <a href="#myfavourite">My Favourite</a>
+        <a href="myfavourite.html">My Favourite</a>
         <a href="#contact">Contact</a>
         <a class="icon" onclick="openNav()">&#9776; </a>
       </div>
@@ -54,7 +54,7 @@
         <a href="https://chowkuiheng.github.io/assignment/">Home</a>
         <a href="aboutme.html">About Me</a>
         <a href="mywork.html">My Work</a>
-        <a href="#">My Favourite</a>
+        <a href="myfavourite.html">My Favourite</a>
         <a href="#">Contact</a>
       </div>
     </div>
@@ -241,7 +241,7 @@
         <a href="https://chowkuiheng.github.io/assignment/">Home</a>
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html">My Work</a>
-        <a href="#">My Favourite</a>
+        <a href="myfavourite.html">My Favourite</a>
         <a href="#">Contact</a>
         <p>Term of Use &nbsp;&nbsp;Privacy Policy</p>
       </div>
