--- a/week4/homework2.html
+++ b/week4/homework2.html
@@ -16,36 +16,32 @@
   </head>
 
   <body>
-    <div id="heading1">
-      <h1 id="h1">CUSTOMER REVIEWS</h1>
+    <div class="heading1">
+      <h1>CUSTOMER REVIEWS</h1>
     </div>
-
-    <div class="container">
-      <div id="picture1"></div>
-      <div id="picture2"></div>
-      <div id="picture3"></div>
-    </div>
-
-    <div class="container_text">
-      <div id="text1">
-        <h2 id="h2">Murille Blake</h2>
+    <div class="bigbox">
+      <div class="box1">
+        <img src="img/girlgreencloth2.jpg" width="80%" />
+        <h5>Murille Blake</h5>
         <p>
-          Testimonials are short quotes from people who love your brand. It's a
-          great way to convince customers to try your services.
+          Testimonials are short quotes from<br>people who love your brand. It's a<br>
+          great way to convince customers<br> to try your services.
         </p>
       </div>
-      <div id="text2">
-        <h2 id="h3">Inna Tran</h2>
+      <div class="box1">
+        <img src="img/girlsmile2.1.jpg" width="80%"/>
+        <h5>Inna Tran</h5>
         <p>
-          Testimonials are short quotes from people who love your brand. It's a
-          great way to convince customers to try your services.
+          Testimonials are short quotes from<br>people who love your brand. It's a<br>
+          great way to convince customers<br> to try your services.
         </p>
       </div>
-      <div id="text3">
-        <h2 id="h4">Cylde Meily</h2>
+      <div class="box1">
+        <img src="img/mansmile2.2.jpg" width="80%" />
+        <h5>Cylde Meily</h5>
         <p>
-          Testimonials are short quotes from people who love your brand. It's a
-          great way to convince customers to try your services.
+          Testimonials are short quotes from<br>people who love your brand. It's a<br>
+          great way to convince customers<br> to try your services.
         </p>
       </div>
     </div>
