--- a/week4/homework1.html
+++ b/week4/homework1.html
@@ -24,7 +24,7 @@
         </h1>
         <p id="p">Furniture, decor and beyond</p>
       </div>
-      <div id="example2"><img src="img/tablelamp1.jpg" width="700px"/></div>
+      <div id="example2"><img src="img/tablelamp1.jpg" width="100%"/></div>
     </div>
   </body>
 </html>
