--- a/assignment/index.html
+++ b/assignment/index.html
@@ -25,7 +25,7 @@
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html" >My Work</a>
         <a href="myfavourite.html">My Favourite</a>
-        <a href="#contact">Contact</a>
+        <a href="contact.html">Contact</a>
         <a class="icon" onclick="openNav()">&#9776; </a>
       </div>
     </div>
@@ -55,7 +55,7 @@
         <a href="aboutme.html">About Me</a>
         <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
     <script>
@@ -242,7 +242,7 @@
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
         <p>Term of Use &nbsp;&nbsp;Privacy Policy</p>
       </div>
     </div>
