--- a/assignment/myfavourite.html
+++ b/assignment/myfavourite.html
@@ -50,7 +50,7 @@
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
     <script>
@@ -144,7 +144,7 @@
         <a href="aboutme.html">About Me</a>
         <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
         <p>Term of Use &nbsp;&nbsp;Privacy Policy</p>
       </div>
     </div>
