--- a/assignment/mywork.html
+++ b/assignment/mywork.html
@@ -25,7 +25,7 @@
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html" >My Work</a>
         <a href="myfavourite.html">My Favourite</a>
-        <a href="#contact">Contact</a>
+        <a href="contact.html">Contact</a>
         <a class="icon" onclick="openNav()">&#9776; </a>
       </div>
     </div>
@@ -48,7 +48,7 @@
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html" >My Work</a>
         <a href="myfavourite.html">My Favourite</a>
-        <a href="#contact">Contact</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
     <script>
@@ -150,7 +150,7 @@
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html" >My Work</a>
         <a href="myfavourite.html">My Favourite</a>
-        <a href="#contact">Contact</a>
+        <a href="contact.html">Contact</a>
         <p>Term of Use &nbsp;&nbsp;Privacy Policy</p>
       </div>
     </div>
