adding contact link to contact button

--- a/assignment/mywork.html
+++ b/assignment/mywork.html
@@ -135,7 +135,7 @@
     <div class="container4">
       <div class="box4">
         <h4>Get in touch</h4>
-        <button class="contact">Contact</button>
+        <a class="contact" href="contact.html">Contact</a>
         <div class="sidebar1">
           <a href="https://www.facebook.com/kuihengchow/" target="_new"><img src="img/facebooklogo.png" width="35px" /></a>
           <a href="https://www.instagram.com/jackiechow6867/" target="_new"><img src="img/instagram.png" width="35px" /></a>
