--- a/assignment/contact.html
+++ b/assignment/contact.html
@@ -496,7 +496,7 @@
     <div class="container3">
       <div class="box4">
         <h4>Get in touch</h4>
-        <button class="contact">Contact</button>
+        <a class="contact" href="contact.html">Contact</a>
         <div class="sidebar1">
           <a href="https://www.facebook.com/kuihengchow/" target="_new"
             ><img src="img/facebooklogo.png" width="35px"
