--- a/assignment/contact.html
+++ b/assignment/contact.html
@@ -119,22 +119,27 @@
                   name="phone"
                   placeholder="xxx xxx xxxx"
                 />
-
-                <p>Gender</p>
-                <form>
-                  <input type="radio" id="male" name="gender" value="male" />
-                  <label for="male">Male</label><br />
-                  <input
-                    type="radio"
-                    id="female"
-                    name="gender"
-                    value="female"
-                  />
-                  <label for="female">Female</label><br />
-                  <input type="radio" id="other" name="gender" value="other" />
-                  <label for="other">Other</label>
-                </form>
-
+                <div class="genderbox">
+                  <p>Gender</p>
+                  <form>
+                    <input type="radio" id="male" name="gender" value="male" />
+                    <label for="male">Male</label><br />
+                    <input
+                      type="radio"
+                      id="female"
+                      name="gender"
+                      value="female"
+                    />
+                    <label for="female">Female</label><br />
+                    <input
+                      type="radio"
+                      id="other"
+                      name="gender"
+                      value="other"
+                    />
+                    <label for="other">Other</label>
+                  </form>
+                </div>
                 <p>Former Address</p>
                 <input
                   class="namebox1"
